maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: type mismatch;
 found   : String("")
 required: Int
			if (getIndication(i,j)==10000) setIndication(i,j,"")
                                                                         ^